# zero-to-qed

./: .gitignore  BUILD.md  CONTRIBUTORS.md  README.md  dprint.json  justfile  lakefile.lean
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: book-html.toml  book-typst.toml  book.toml  linkcheck.toml  mangler.py  preamble.typst
docs/src/: 01_introduction.md  02_why.md  03_theorem_provers.md  04_build_system.md  05_basics.md  06_control_flow.md  06_data_structures.md  07_control_flow.md  07_polymorphism.md  08_effects.md  08_polymorphism.md  09_effects.md  09_io.md  10_io.md  10_proving.md  11_proving.md  11_type_theory.md  12_dependent_types.md  12_type_theory.md  13_dependent_types.md  13_proof_strategy.md  14_proof_strategy.md  14_tactics.md  15_subtyping.md  16_mathematics.md  16a_algebraic_structures.md  17_algebraic_structures.md  17_mathematics.md  17_mathlib.md  17_verification.md  18_algebraic_structures.md  18_mathlib.md  18_verification.md  19_artificial_intelligence.md  19_mathlib.md  19_verification.md  20_artificial_intelligence.md  20_references.md  21_artificial_intelligence.md  22_references.md  (+2 more)
docs/theme/: custom.css  head.hbs  highlight.js
examples/: Cargo.toml
examples/game-of-life/: Cargo.toml
examples/game-of-life/src/: lib.rs  main.rs
examples/stack-machine/: Cargo.toml
examples/stack-machine/src/: lib.rs
scripts/: build_pdf.py  colors.py  life_viz.py  pyproject.toml  tactic_viz.py  test_examples.sh
src/: ZeroToQED.lean
src/Examples/: DndCharacter.lean  MagicTheGathering.lean  SpellEffects.lean  Transporter.lean
(+25 files in other folders)
