[workspace]
resolver = "2"
members = ["game-of-life", "stack-machine"]

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
unnested_or_patterns = "allow"
missing_docs_in_private_items = "allow"
